# MRID-GUI

./: .gitignore  MRID-GUI.includes  MRID_GUI.spec  README.md  form.ui  main_window.py  main_window.spec  mplwidget.py  mplwidget_ephys.py  mri - Shortcut.lnk  mri-data - Shortcut.lnk  pgwidget.py  pyproject.toml  requirements.txt  resources.qrc  resources.rcc  resources_rc.py  rigid_transform_origin.txt  temp_files.txt  ui_form.py  ui_mainwindow.py  ui_userdialog.py  userdialog.py  userdialog.ui  userdialog_window.py
Files/: mrid_library.pkl
Icons/ITKsnap/: desktop.ini
core/: cursor.py  electrode_localization.py  interactor_style.py  load_MRI_file.py  load_other_file.py  measurement.py  mri_volume.py  mrid_tags.py  paintbrush.py  registration.py  resample_data.py  segmentation.py  segmentation_utils.py
core/segmentation/: evolution.py  initialization.py  threshold.py
ephys/: change_anatRegion.py  ephysrecording.py  init_ephys.py  mrid_info.py  videoplayer.py  visualisation3D.py  visualisationEphys.py
file_handling/: loadimage_into3D.py  loadimage_into4D.py
gui_utils/: buttons_gui3D.py  buttons_gui4D.py  intensity_table.py  paintbrush_gui.py  segmentation_gui.py  visualization3D.py  volume.frag  volumer_viewer.qml
mrid_utils/: barcode.py  channel_mapper.py  chmap.py  com.py  gauss_aux.py  handlers.py  heatmap.py  point_mapper.py  roi.py  warper.py
samri/: data_fetcher.py  samri_main.py
samri/samri/pipelines/: diagnostics.py  extra_functions.py  glm.py  manipulations.py  nodes.py  preprocess.py  reposit.py  utils.py
samri/samri/plotting/: contour_slices.conf
samri/samri/report/: development.py  roi.py  (+1 more)
text_file/: labels.txt  tags_colors.txt
utils/: contrast.py  inputdialog.py  minimap_handler.py  mri-data - Shortcut.lnk  mrid_inputdialog.py  scale_bar.py  zoom.py
