[project]
name = "PySide Widgets Project"

[tool.pyside6-project]
files = ["core/cursor.py", "core/interactor_style.py", "core/load_MRI_file.py", "core/load_other_file.py", "core/measurement.py", "core/paintbrush.py", "core/registration.py", "core/segmentation/evolution.py", "core/segmentation/initialization.py", "core/segmentation/threshold.py", "form.ui", "main_window.py", "userdialog.ui", "userdialog_window.py", "utils/contrast.py", "utils/minimap_handler.py", "utils/scale_bar.py", "utils/zoom.py"]
